samples/_failures_safe/1761636596_ea4c75_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_68cacda9.c: In function ‘main’:
./samples/SAFE/__tmp_68cacda9.c:153:73: error: expected ‘)’ at end of input
  153 |     printf("Compression ratio: %.2f%%\n", (1.0 - (double)compressed.size
      |                                           ~                             ^
      |                                                                         )
./samples/SAFE/__tmp_68cacda9.c:153:5: error: expected declaration or statement at end of input
  153 |     printf("Compression ratio: %.2f%%\n", (1.0 - (double)compressed.size
      |     ^~~~~~
